add XCODE_WORKSPACE env var for Circle

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   xcode:
     version: "8.2"
+  environment:
+    XCODE_WORKSPACE: SourceKitten/SourceKitten.xcworkspace
 
 checkout:
   post:
